# RubiksCubeSolver

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabasas/: CornerPatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
PatternDatabases/: CornerDBmaker.cpp  CornerDBmaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
